# project-2-project-2-24

./: .gitignore  README.md  app.py  app.yaml  baseline_openapi_spec.yaml  baseline_openapi_spec_v2.yaml  ece-461-proj-2-24-c016f6dd5f2a.json  expanded_openapi_spec_v2.yaml  expanded_openapi_spec_v3.yaml  requirements.txt  run_server.sh
server/: .env  .flake8  .gitignore  CUSTOM_Dockerfile  Dockerfile  ORIG_Dockerfile  README.md  __main__.py  app.yaml  docker-compose.yaml  openapi.yaml  pyproject.toml  requirements.txt  run.sh  run_server.sh  setup.cfg  test-requirements.txt  test_output.txt  util.py
server/.openapi-generator/: FILES
server/database/: __init__.py
server/models/: package_rating.py
server/new_server/: ece-461-proj-2-24-37419e7b37ad.json  setup.cfg  setup.py
server/new_server/.openapi-generator/: FILES
server/new_server/tests/: conftest.py
server/openapi_server/: __main__.py  encoder.py  requirements.txt  setup.py  util.py
server/openapi_server/controllers/: default_controller.py
server/openapi_server/database/: __init__.py  database.py  test_database.py
server/openapi_server/models/: __init__.py  authentication_request.py  package.py  package_data.py  package_history_entry.py  package_metadata.py  package_query.py  package_rating.py  user.py  user_authentication_info.py
server/openapi_server/openapi/: openapi.yaml
server/openapi_server/test/: test_database.py  test_default_controller.py
server/src/openapi_server/: .env  main.py  (+1 more)
server/test/: test_database.py
server/tests/: conftest.py  test_database.py  test_default_api.py
(+145 files in other folders)
