[metadata]
name = openapi_server
version = 2.1.0
description = Expanded API for ECE 461/Fall 2021/Project 2/Team 24: A Trustworthy Module Registry
long_description = file: README.md
keywords = OpenAPI ECE 461 - Fall 2021 - Project 2 - Team 24
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    fastapi
setup_requires =
    setuptools
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src
